# diamondBotV2

./: .cursorrc  .dockerignore  .gitignore  .replit  ABI_README.md  CACHE_GUIDE.md  Cargo.toml  Dockerfile.app  Dockerfile.websocket  IMPROVEMENTS.md  NETWORK_MIGRATION.md  README.md  SUMMARY.md  WORKSPACE.md  docker-compose.yml  modify.ps1  package-lock.json  package.json  prometheus.yml  rules.md  server.js
.cursor/rules/: scan.mdc
AI_Training/: rl_agent.rs
Memory/backup_2025-03-27_04-02-04/: project_log_2025-03-27_04-02-04.json
Memory/backup_2025-03-27_05-14-38/: project_log_2025-03-27_05-14-38.json
Memory/backup_2025-03-27_05-46-11/: project_log_2025-03-27_05-46-11.json
Memory/backup_2025-03-27_17-12-42/: project_log_2025-03-27_17-12-42.json
Memory/backup_2025-03-27_18-37-53/: project_log_2025-03-27_18-37-53.json
Memory/backup_2025-03-27_20-32-39/: project_log_2025-03-27_20-32-39.json
Memory/backup_2025-03-27_22-03-47/: project_log_2025-03-27_22-03-47.json
Memory/backup_2025-03-27_22-10-24/: project_log_2025-03-27_22-10-24.json
Memory/backup_2025-03-28_00-57-35/: project_log_2025-03-28_00-57-35.json
Memory/backup_2025-03-28_01-48-55/: project_log_2025-03-28_01-48-55.json
Memory/backup_2025-03-28_04-55-22/: project_log_2025-03-28_04-55-22.json
Memory/backup_2025-03-28_15-43-14/: project_log_2025-03-28_15-43-14.json
ai_modules/: equilibrium.rs  mod.rs  monte_carlo.rs
ai_modules/ai_training/: mod.rs
ai_modules/ai_training/realtime/: mod.rs  sentiment.rs
attached_assets/: Pasted--workspace-cargo-clippy-workspace-message-format-json-Compiling-proc-macro2-v1-0-94-reas-1744232848434.txt  Pasted-hecking-futures-channel-v0-3-31-reason-compiler-artifact-package-id-registry-https-github-1744232821430.txt
backend/: transactionWorker.js
backend/bots/: baseSnipeBot.js  mevMode.js
backend/bots/chainAdapters/: evmAdapter.js  nearAdapter.js  solAdapter.js  suiAdapter.js  tonAdapter.js
backend/config/: backup.config.js  config.js
backend/controllers/: botController.js  userController.js
backend/logic_module/: gasOptimizer.js  riskAnalyzer.js  tokenStatus.js  tradeLogic.js
backend/services/: notificationService.js  pricePredictionService.js  storageService.js  transactionService.js  userService.js  wsService.js
backend/utils/: api.js  backupProject.js  backupSteam.js  helpers.js  logger.js  redisClient.js  retry.js
blockchain/: Cargo.toml
blockchain/src/: lib.rs  mod.rs
blockchain/src/abi/: abis.rs  erc20.json  factory.json  mod.rs  pair.json  router.json
blockchain/src/core/: contract_manager.rs  mod.rs  token_info.rs  transaction.rs
blockchain/src/crosschain/: cross_chain.rs
blockchain/src/depin/: mod.rs
blockchain/src/diamond_token/: Cargo.toml  README.md
blockchain/src/diamond_token/src/: bridge.rs  lib.rs  module_manager.rs  supply_tracker.rs
blockchain/src/farming/: Cargo.toml  README.md
blockchain/src/farming/src/: lib.rs
blockchain/src/grpc/: mod.rs
blockchain/src/mining/: Cargo.toml  README.md
blockchain/src/mining/src/: lib.rs
common/: Cargo.toml  cache.rs  error_handling.rs
common/src/: ai.rs  cache.rs  chain_adapter.rs  config.rs  diamond_manager.rs  equilibrium.rs  error.rs  error_handler.rs  event_handler.rs  executor.rs  lib.rs  logger.rs  metrics.rs  monte_equilibrium.rs  retry_policy.rs  risk_analyzer.rs  scheduler.rs  security.rs  server.rs  state_manager.rs  subscription.rs  task_manager.rs  types.rs  user.rs  utils.rs  validator.rs  worker.rs
common/src/middleware/: README.md  auth.rs  core.rs  middleware.rs  mod.rs  rate_limit.rs
common/src/models/: block.rs  chain.rs  mod.rs  transaction.rs  user.rs  wallet.rs
common/src/network/: README.md  config.rs  error.rs  lib.rs  message.rs  mod.rs  models.rs  server.rs  types.rs  utils.rs
common/src/network/core/: mod.rs
frontend/: package.json  pakage.js
frontend/public/: index.html
frontend/src/: App.js  styles.css
frontend/src/components/: Footer.js  Header.js  HistoryPage.js  SettingsPage.js  SnipebotPage.js  TelegramAuth.js  TradeForm.js
grafana-data/: grafana.db
network/: Cargo.toml  Dockerfile  docker-compose.yml  grpc.rs  mod.rs  quic.rs  redis_service.rs
network/core/: config.rs  mod.rs  types.rs
network/grafana/provisioning/dashboards/: snipebot.json
network/prometheus/: prometheus.yml
network/slave_node/src/: extension_system.rs  message_queue.rs
network/src/: grpc_server.rs  lib.rs  redis_service.rs  websocket.rs  websocket_server.rs
network/storage/: redis_storage.rs
network/wasm/: Cargo.toml  analyzer.rs
network/wasm/src/: lib.rs
snipebot/: Cargo.toml  IMPROVEMENTS.md  proto.rs
snipebot/src/: AIModule.rs  MonteEquilibrium.rs  TradeManager.rs  abi_utils.rs  ai_coordinator.rs  api.rs  auto_tuning.rs  auto_tuning_manager.rs  blockchain.rs  blockchain_cache.rs  cache.rs  chain_configs.rs  config.rs  connection_manager.rs  contracts.rs  endpoint_manager.rs  error_handling.rs  event_bus.rs  flashbots.rs  gas_optimizer.rs  health_monitor.rs  lib.rs  main.rs  mempool.rs  metric.rs  middleware.rs  module_manager.rs  network.rs  nodes.rs  profit_models.rs  rate_limit.rs  retry_manager.rs  risk_analysis.rs  risk_analyzer.rs  service.rs  snipebot.rs  storage.rs  subscription.rs  token_status.rs  trade_logic.rs  (+5 more)
snipebot/src/analysis/: mod.rs  token_analyzer.rs
snipebot/src/chain_adapters/: adapter_registry.rs  avalanche.rs  base.rs  base_adapter.rs  bsc.rs  chain_adapter_impl.rs  chain_registry.rs  chain_traits.rs  configs.rs  connection_pool.rs  error_handler.rs  eth.rs  ethereum.rs  interfaces.rs  mod.rs  monad.rs  non_evm_adapter.rs  nonce_manager.rs  retry.rs  retry_policy.rs  trait_adapter.rs  wallet_integration.rs
snipebot/src/chain_adapters/tests/: test_evm_adapter.rs
snipebot/src/performance/: mod.rs
snipebot/src/trade/: auto_tuning.rs  mempool.rs  multichain.rs  token_status.rs  trade_executor.rs  trade_logic.rs  transaction.rs
snipebot/src/utils/: format.rs  math.rs  mod.rs  time.rs
wallet/: Cargo.toml  wallet.rs
wallet/src/: config.rs  defi.rs  farm.rs  lib.rs  secure_storage.rs  wallet.rs
(+2 files in other folders)
