[package]
name = "diamond_common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = { version = "0.3", features = ["std"] }
futures-util = "0.3"
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"

# Logging
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto & Blockchain
ethers = { version = "2.0", features = ["abigen", "ws", "rustls", "legacy"] }
argon2 = "0.5"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
rand = "0.8"
once_cell = "1.0"
url = "2.5"

# Web & API
axum = { version = "0.6.20", features = ["headers", "ws", "http1", "http2", "json", "multipart", "original-uri", "query", "tower-log"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
jsonwebtoken = "8.3"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# Network
quinn = "0.10.2"
tonic = { version = "0.10", features = ["transport", "tls", "prost"] }

# Storage
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "aio", "json"] }

[features]
blockchain = []

[lib]
name = "diamond_common"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.0"
