[package]
name = "diamond_common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto & Blockchain
ethers = { version = "2.0", features = ["abigen", "legacy"] }
argon2 = "0.5"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
rand = "0.8"
once_cell = "1.0"
url = "2.5"

# Web & API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["full"] }
jsonwebtoken = "8.3"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# Network
quinn = "0.10.2"
tonic = { version = "0.10", features = ["transport", "tls", "prost"] }

# Storage
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "aio", "json"] }

# New dependencies
bincode = "1.3"
lru = "0.12"
serde_with = "3.6"

# Added from the code block
network = { path = "../network" }

[features]
blockchain = []
default = []
testnet = []
mainnet = []
anvil = []
debug = []
trace = ["debug"]

[lib]
name = "diamond_common"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"
tokio-test = "0.4"
proptest = "1.4"
