[workspace]
members = [
    "wasm"
    # Các module khác sẽ được thêm vào sau
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
rand = "0.8" 