[workspace]
members = [
    "wasm"
    # Các module khác sẽ được thêm vào sau
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
rand = "0.8"

[package]
name = "network"
version = "0.1.0"
edition = "2021"

[lib]
name = "network"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
axum = { version = "0.6", features = ["ws"] }
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
jsonwebtoken = "8.3"
bincode = "1.3"
common = { path = "../common" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11" 