[package]
name = "diamond_network_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Utilities
uuid = { workspace = true, features = ["v4", "js"] }

# Security
sha2 = "0.10.6"

[dev-dependencies]
wasm-bindgen-test = "0.3" 